--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "type": "module",
+   "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
@@ -13,9 +13,7 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
-    "express": "^4.18.1",
-    "mysql": "^2.18.1",
-    "mysql2": "^2.3.3",
-    "nodemon": "^3.0.1"
+    "express": "^4.18.1"
+   
   }
 }
